@@ -26,6 +26,12 @@
 #ifndef QSIZE_H_
 #define QSIZE_H_
 
+#ifdef USING_BORROWED_QSIZE
+
+#include <_qsize.h>
+
+#else
+
 #ifdef HAVE_CONFIG_H
 #include <config.h>
 #endif
@@ -87,5 +93,7 @@ public:
     QCOORD h;
 
 }; // class QSize ==============================================================
+
+#endif
 
 #endif
